@@ -8,8 +8,9 @@ trunk
       ID is already in there, the old object will be cleanly removed from
       the database.
     * New methods OSMObject#[] and OSMObject#[]= to access tags directly.
-	* Improved geometry support
-	* Many more tests
+    * Improved geometry support
+    * Many more tests
+    * Added magic << methods to Node, Way, and Relation classes
 
 0.1.1 2007-12-06
     Documentation updates
